--- a/templates/index.html
+++ b/templates/index.html
@@ -27,16 +27,16 @@
 		</div>
         <div class="row text-center">
 			<div class="col-3">
-				<button type="button" class="btn btn-introduction btn-light"><i class="fas fa-book"></i> A-Z List</button>
+				<a class="btn btn-introduction btn-light" href="#"><i class="fas fa-book"></i> A-Z List</a>
 			</div>
             <div class="col-3">
-				<button type="button" class="btn btn-introduction btn-light"><i class="fas fa-star"></i> Top Rated</button>
+				<a class="btn btn-introduction btn-light" href="#"><i class="fas fa-star"></i> Top Rated</a>
 			</div>
             <div class="col-3">
-				<button type="button" class="btn btn-introduction btn-light"><i class="fas fa-random"></i> Random</button>
+				<a class="btn btn-introduction btn-light" href="#"><i class="fas fa-random"></i> Random</a>
 			</div>
             <div class="col-3">
-				<button type="button" class="btn btn-introduction btn-light"><i class="fas fa-plus-circle"></i> Add</button>
+				<a class="btn btn-introduction btn-light" href="{{url_for('add_entry')}}"><i class="fas fa-plus-circle"></i> Add</a>
 			</div>
 		</div>
 	</div>
