--- a/templates/base.html
+++ b/templates/base.html
@@ -29,13 +29,13 @@
 					<a class="nav-link" href="{{url_for('index')}}">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">A-Z List</a>
+					<a class="nav-link" href="{{url_for('az')}}">A-Z List</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Top Rated</a>
+					<a class="nav-link" href="{{url_for('top_rated')}}">Top Rated</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Random</a>
+					<a class="nav-link" href="{{url_for('random')}}">Random</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="{{url_for('add_entry')}}">Add Entry</a>
