A-Z page now shows entries in order. Top rated page properly shows top 20 upvoted entries. Random page in progress.

--- a/templates/random.html
+++ b/templates/random.html
@@ -21,11 +21,10 @@
     <!-- /INTRODUCTION -->
 
     <!-- ENTRY-CARDS -->
-	{% for entry in entries %}
 	<div class="container-fluid entry-container">
 		<div class="row justify-content-center">
 			<div class="col-10">
-				<h4 class="entry-header">{{entry.name}}</h4>
+				<h4 class="entry-header">{{random_entry.name}}</h4>
 			</div>
 			<div class="col-2 text-right">
 				<a class="btn btn-outline-danger" href="{{url_for('delete_entry', entry_id=entry._id)}}"><i class="far fa-trash-alt"></i></a>
@@ -33,19 +32,18 @@
 		</div>
 		<div class="row justify-content-center">
 			<div class="col-12">
-				<p class="entry-description">{{entry.description}}</p>
+				<p class="entry-description">{{random_entry.description}}</p>
 			</div>
 		</div>
 		<div class="row justify-content-center">
 			<div class="col-6">
-				<button type="button" class="btn btn-outline-success entry-upvote-button"><i class="far fa-thumbs-up"></i></button><span class="entry-upvotes">  {{entry.upvotes}}</span>
+				<button type="button" class="btn btn-outline-success entry-upvote-button"><i class="far fa-thumbs-up"></i></button><span class="entry-upvotes">  {{random_entry.upvotes}}</span>
 			</div>
 			<div class="col-6 text-right">
 				<a class="btn btn-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
 			</div>
 		</div>
 	</div>
-	{% endfor %}
 	<!-- /ENTRY-CARDS -->
 </div>
 
