--- a/templates/random.html
+++ b/templates/random.html
@@ -13,7 +13,7 @@
         <div class="row text-center">
 			<div class="col-12">
 				<p>
-					Here you will find a full list of entries that have been helpfully uploaded.
+					Try your luck, maybe you'll learn something new.
 				</p>
 			</div>
 		</div>
@@ -21,10 +21,11 @@
     <!-- /INTRODUCTION -->
 
     <!-- ENTRY-CARDS -->
+    {% for entry in random_entry %}
 	<div class="container-fluid entry-container">
 		<div class="row justify-content-center">
 			<div class="col-10">
-				<h4 class="entry-header">{{random_entry.name}}</h4>
+				<h4 class="entry-header">{{entry.name}}</h4>
 			</div>
 			<div class="col-2 text-right">
 				<a class="btn btn-outline-danger" href="{{url_for('delete_entry', entry_id=entry._id)}}"><i class="far fa-trash-alt"></i></a>
@@ -32,19 +33,29 @@
 		</div>
 		<div class="row justify-content-center">
 			<div class="col-12">
-				<p class="entry-description">{{random_entry.description}}</p>
+				<p class="entry-description">{{entry.description}}</p>
 			</div>
 		</div>
 		<div class="row justify-content-center">
 			<div class="col-6">
-				<button type="button" class="btn btn-outline-success entry-upvote-button"><i class="far fa-thumbs-up"></i></button><span class="entry-upvotes">  {{random_entry.upvotes}}</span>
+				<button type="button" class="btn btn-outline-success entry-upvote-button"><i class="far fa-thumbs-up"></i></button><span class="entry-upvotes">  {{entry.upvotes}}</span>
 			</div>
 			<div class="col-6 text-right">
 				<a class="btn btn-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
 			</div>
 		</div>
 	</div>
+    {% endfor %}
 	<!-- /ENTRY-CARDS -->
+
+    <div class="container my-4">
+        <div class="row text-center">
+            <div class="col-12">
+                <a class="btn btn-random btn-lg btn-light" href="{{url_for('random')}}"><i class="fas fa-random"></i> Random</a>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 {% endblock %}
