--- a/templates/addentry.html
+++ b/templates/addentry.html
@@ -19,7 +19,7 @@
                     <textarea class="form-control" id="description" name="description" rows="3"></textarea>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="upvotes" name="upvotes" value="0" hidden>
+                    <input type="number" class="form-control" id="upvotes" name="upvotes" value="0" hidden>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
 			</form>
