--- a/templates/az.html
+++ b/templates/az.html
@@ -38,7 +38,7 @@
 		</div>
 		<div class="row justify-content-center">
 			<div class="col-6">
-				<button type="button" class="btn btn-outline-success entry-upvote-button"><i class="far fa-thumbs-up"></i></button><span class="entry-upvotes">  {{entry.upvotes}}</span>
+				<a class="btn btn-outline-success entry-upvote-button" href="{{url_for('add_upvote', entry_id=entry._id)}}"><i class="far fa-thumbs-up"></i><span class="entry-upvotes">  {{entry.upvotes}}</span></a>
 			</div>
 			<div class="col-6 text-right">
 				<a class="btn btn-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
