--- a/templates/addentry.html
+++ b/templates/addentry.html
@@ -9,6 +9,7 @@
 	</div>
 	<div class="row">
 		<div class="col-12">
+            <!-- ADDFORM -->
 			<form action="{{url_for('insert_entry')}}" method="POST">
 				<div class="form-group">
 					<label for="name">Name</label>
@@ -23,6 +24,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
 			</form>
+            <!-- ADDFORM -->
 		</div>
 	</div>
 </div>
