--- a/templates/editentry.html
+++ b/templates/editentry.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+
 <div class="container my-3">
 	<div class="row">
 		<div class="col-12">
@@ -9,6 +10,7 @@
 	</div>
 	<div class="row">
 		<div class="col-12">
+            <!-- EDITFORM -->
 			<form action="{{url_for('update_entry', entry_id=entry._id)}}" method="POST">
 				<div class="form-group">
 					<label for="name">Name</label>
@@ -23,6 +25,7 @@
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
 			</form>
+            <!-- /EDITFORM -->
 		</div>
 	</div>
 </div>
