--- a/templates/addentry.html
+++ b/templates/addentry.html
@@ -13,11 +13,11 @@
 			<form action="{{url_for('insert_entry')}}" method="POST">
 				<div class="form-group">
 					<label for="name">Name</label>
-					<input type="text" class="form-control" id="name" name="name" placeholder="">
+					<input type="text" class="form-control" id="name" name="name" required>
                 </div>
                 <div class="form-group">
                     <label for="description">Description</label>
-                    <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+                    <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
                 </div>
                 <div class="form-group">
                     <input type="number" class="form-control" id="upvotes" name="upvotes" value="0" hidden>
