--- a/templates/az.html
+++ b/templates/az.html
@@ -4,7 +4,7 @@
 <div class="container page-container">
 	
     <!-- INTRODUCTION -->
-    <div class="container mt-3 mb-5">
+    <div class="container mt-3 mb-3">
 		<div class="row text-center mb-2">
 			<div class="col-12">
                 <h1>A-Z List</h1>
@@ -41,7 +41,7 @@
 				<a class="btn btn-outline-success entry-upvote-button" href="{{url_for('add_upvote', page='az', entry_id=entry._id)}}"><i class="far fa-thumbs-up"></i><span class="entry-upvotes">  {{entry.upvotes}}</span></a>
 			</div>
 			<div class="col-6 text-right">
-				<a class="btn btn-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
+				<a class="btn btn-outline-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
 			</div>
 		</div>
 	</div>
