--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <div class="row text-center">
 			<div class="col-12">
 				<p>
-					Your source of gamer language.</br>
+					Your source of gamer language.<br>
 					Search, add to and edit the library to help people better understand the race know as "Gamers".
 				</p>
 			</div>
@@ -63,7 +63,7 @@
 				<a class="btn btn-outline-success entry-upvote-button" href="{{url_for('add_upvote', page='index', entry_id=entry._id)}}"><i class="far fa-thumbs-up"></i><span class="entry-upvotes">  {{entry.upvotes}}</span></a>
 			</div>
 			<div class="col-6 text-right">
-				<a class="btn btn-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
+				<a class="btn btn-outline-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
 			</div>
 		</div>
 	</div>
