--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,7 @@
 <div class="container page-container">
 	
     <!-- INTRODUCTION -->
-    <div class="container mt-3 mb-5">
+    <div class="container mt-3 mb-3">
 		<div class="row text-center mb-2">
 			<div class="col-12">
                 <h1>Search</h1>
@@ -13,7 +13,7 @@
         <div class="row text-center">
 			<div class="col-12">
 				<p>
-					Heard something and wanted to know what it meant?</br>
+					Heard something and wanted to know what it meant?<br>
                     You've come to the right place.
 				</p>
 			</div>
@@ -29,7 +29,7 @@
             <div class="input-group mb-3">
                 <input type="text" class="form-control" id="search_term" name="search_term" value="{{search_term}}" required>
                 <div class="input-group-append">
-                    <button type="submit" class="btn btn-primary"><i class="fas fa-search"></i></button>
+                    <button type="submit" class="btn btn-dark"><i class="fas fa-search"></i></button>
                 </div>
             </div>
         </form>
@@ -71,7 +71,7 @@
 				<a class="btn btn-outline-success entry-upvote-button" href="{{url_for('add_upvote', page='search', entry_id=entry._id)}}"><i class="far fa-thumbs-up"></i><span class="entry-upvotes">  {{entry.upvotes}}</span></a>
 			</div>
 			<div class="col-6 text-right">
-				<a class="btn btn-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
+				<a class="btn btn-outline-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
 			</div>
 		</div>
 	</div>
