--- a/templates/editentry.html
+++ b/templates/editentry.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <!-- INTRODUCTION -->
 <div class="container mt-3 mb-3">
@@ -19,13 +18,13 @@
 <!-- /INTRODUCTION -->
 
 <div class="container my-3">
-	<div class="row">
-		<div class="col-12">
+    <div class="row">
+        <div class="col-12">
             <!-- EDITFORM -->
-			<form action="{{url_for('update_entry', entry_id=entry._id)}}" method="POST">
-				<div class="form-group">
-					<label for="name">Name</label>
-					<input type="text" class="form-control" id="name" name="name" value="{{entry.name}}" required>
+            <form action="{{url_for('update_entry', entry_id=entry._id)}}" method="POST">
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" id="name" name="name" value="{{entry.name}}" required>
                 </div>
                 <div class="form-group">
                     <label for="description">Description</label>
@@ -35,11 +34,10 @@
                     <input type="text" class="form-control" id="upvotes" name="upvotes" value="{{entry.upvotes}}" hidden>
                 </div>
                 <button type="submit" class="btn btn-outline-primary">Submit</button>
-			</form>
+            </form>
             <!-- /EDITFORM -->
-		</div>
-	</div>
+        </div>
+    </div>
 </div>
-
 
 {% endblock %}
