--- a/templates/index.html
+++ b/templates/index.html
@@ -1,74 +1,73 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <div class="container page-container">
-	
+
     <!-- INTRODUCTION -->
     <div class="container mt-3 mb-5">
-		<div class="row text-center mb-2">
-			<div class="col-12">
+        <div class="row text-center mb-2">
+            <div class="col-12">
                 <h1>Gametionary</h1>
-			</div>
-		</div>
+            </div>
+        </div>
         <div class="row text-center">
-			<div class="col-12">
-				<p>
-					Your source of gamer language.<br>
-					Search, add to and edit the library to help people better understand the race know as "Gamers".
-				</p>
-			</div>
-		</div>
+            <div class="col-12">
+                <p>
+                    Your source of gamer language.
+                    <br> Search, add to and edit the library to help people better understand the race know as "Gamers".
+                </p>
+            </div>
+        </div>
         <div class="row text-center">
-			<div class="col-12">
-				<p>
-					<strong>Get started below:</strong>
-				</p>
-			</div>
-		</div>
+            <div class="col-12">
+                <p>
+                    <strong>Get started below:</strong>
+                </p>
+            </div>
+        </div>
         <div class="row text-center">
-			<div class="col-3 px-1">
-				<a class="btn btn-introduction btn-light" href="{{url_for('az')}}"><i class="fas fa-book"></i> A-Z List</a>
-			</div>
             <div class="col-3 px-1">
-				<a class="btn btn-introduction btn-light" href="{{url_for('top_rated')}}"><i class="fas fa-star"></i> Top Rated</a>
-			</div>
+                <a class="btn btn-introduction btn-light" href="{{url_for('az')}}"><i class="fas fa-book"></i> A-Z List</a>
+            </div>
             <div class="col-3 px-1">
-				<a class="btn btn-introduction btn-light" href="{{url_for('random')}}"><i class="fas fa-random"></i> Random</a>
-			</div>
+                <a class="btn btn-introduction btn-light" href="{{url_for('top_rated')}}"><i class="fas fa-star"></i> Top Rated</a>
+            </div>
             <div class="col-3 px-1">
-				<a class="btn btn-introduction btn-light" href="{{url_for('add_entry')}}"><i class="fas fa-plus-circle"></i> Add</a>
-			</div>
-		</div>
-	</div>
+                <a class="btn btn-introduction btn-light" href="{{url_for('random')}}"><i class="fas fa-random"></i> Random</a>
+            </div>
+            <div class="col-3 px-1">
+                <a class="btn btn-introduction btn-light" href="{{url_for('add_entry')}}"><i class="fas fa-plus-circle"></i> Add</a>
+            </div>
+        </div>
+    </div>
     <!-- /INTRODUCTION -->
 
-	<!-- ENTRY-CARDS -->
-	{% for entry in entries %}
-	<div class="container-fluid entry-container">
-		<div class="row justify-content-center">
-			<div class="col-9">
-				<h4 class="entry-header">{{entry.name}}</h4>
-			</div>
-			<div class="col-3 text-right">
-				<a class="btn btn-outline-danger" href="{{url_for('delete_entry', entry_id=entry._id)}}"><i class="far fa-trash-alt"></i></a>
-			</div>
-		</div>
-		<div class="row justify-content-center">
-			<div class="col-12">
-				<p class="entry-description">{{entry.description}}</p>
-			</div>
-		</div>
-		<div class="row justify-content-center">
-			<div class="col-6">
-				<a class="btn btn-outline-success entry-upvote-button" href="{{url_for('add_upvote', page='index', entry_id=entry._id)}}"><i class="far fa-thumbs-up"></i><span class="entry-upvotes">  {{entry.upvotes}}</span></a>
-			</div>
-			<div class="col-6 text-right">
-				<a class="btn btn-outline-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
-			</div>
-		</div>
-	</div>
-	{% endfor %}
-	<!-- /ENTRY-CARDS -->
+    <!-- ENTRY-CARDS -->
+    {% for entry in entries %}
+    <div class="container-fluid entry-container">
+        <div class="row justify-content-center">
+            <div class="col-9">
+                <h4 class="entry-header">{{entry.name}}</h4>
+            </div>
+            <div class="col-3 text-right">
+                <a class="btn btn-outline-danger" href="{{url_for('delete_entry', entry_id=entry._id)}}"><i class="far fa-trash-alt"></i></a>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <p class="entry-description">{{entry.description}}</p>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <a class="btn btn-outline-success entry-upvote-button" href="{{url_for('add_upvote', page='index', entry_id=entry._id)}}"><i class="far fa-thumbs-up"></i><span class="entry-upvotes">  {{entry.upvotes}}</span></a>
+            </div>
+            <div class="col-6 text-right">
+                <a class="btn btn-outline-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+    <!-- /ENTRY-CARDS -->
 </div>
 
 {% endblock %}
