--- a/templates/toprated.html
+++ b/templates/toprated.html
@@ -1,52 +1,51 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <div class="container page-container">
-	
+
     <!-- INTRODUCTION -->
     <div class="container mt-3 mb-3">
-		<div class="row text-center mb-2">
-			<div class="col-12">
+        <div class="row text-center mb-2">
+            <div class="col-12">
                 <h1>Top Rated</h1>
-			</div>
-		</div>
+            </div>
+        </div>
         <div class="row text-center">
-			<div class="col-12">
-				<p>
-					Here you will find a full list of entries that have been helpfully uploaded.
-				</p>
-			</div>
-		</div>
-	</div>
+            <div class="col-12">
+                <p>
+                    Here you will find a full list of entries that have been helpfully uploaded.
+                </p>
+            </div>
+        </div>
+    </div>
     <!-- /INTRODUCTION -->
 
     <!-- ENTRY-CARDS -->
-	{% for entry in entries %}
-	<div class="container-fluid entry-container">
-		<div class="row justify-content-center">
-			<div class="col-9">
-				<h4 class="entry-header">{{entry.name}}</h4>
-			</div>
-			<div class="col-3 text-right">
-				<a class="btn btn-outline-danger" href="{{url_for('delete_entry', entry_id=entry._id)}}"><i class="far fa-trash-alt"></i></a>
-			</div>
-		</div>
-		<div class="row justify-content-center">
-			<div class="col-12">
-				<p class="entry-description">{{entry.description}}</p>
-			</div>
-		</div>
-		<div class="row justify-content-center">
-			<div class="col-6">
-				<a class="btn btn-outline-success entry-upvote-button" href="{{url_for('add_upvote', page='top_rated', entry_id=entry._id)}}"><i class="far fa-thumbs-up"></i><span class="entry-upvotes">  {{entry.upvotes}}</span></a>
-			</div>
-			<div class="col-6 text-right">
-				<a class="btn btn-outline-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
-			</div>
-		</div>
-	</div>
-	{% endfor %}
-	<!-- /ENTRY-CARDS -->
+    {% for entry in entries %}
+    <div class="container-fluid entry-container">
+        <div class="row justify-content-center">
+            <div class="col-9">
+                <h4 class="entry-header">{{entry.name}}</h4>
+            </div>
+            <div class="col-3 text-right">
+                <a class="btn btn-outline-danger" href="{{url_for('delete_entry', entry_id=entry._id)}}"><i class="far fa-trash-alt"></i></a>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <p class="entry-description">{{entry.description}}</p>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <a class="btn btn-outline-success entry-upvote-button" href="{{url_for('add_upvote', page='top_rated', entry_id=entry._id)}}"><i class="far fa-thumbs-up"></i><span class="entry-upvotes">  {{entry.upvotes}}</span></a>
+            </div>
+            <div class="col-6 text-right">
+                <a class="btn btn-outline-primary entry-edit-button" href="{{url_for('edit_entry', entry_id=entry._id)}}"><i class="fas fa-pencil-alt"></i> Edit</a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+    <!-- /ENTRY-CARDS -->
 </div>
 
 {% endblock %}
