--- a/templates/editentry.html
+++ b/templates/editentry.html
@@ -1,41 +1,44 @@
 {% extends 'base.html' %} {% block content %}
 
-<!-- INTRODUCTION -->
-<div class="container mt-3 mb-3">
-    <div class="row text-center mb-2">
-        <div class="col-12">
-            <h1>Edit Entry</h1>
-        </div>
-    </div>
-    <div class="row text-center">
-        <div class="col-12">
-            <p>
-                Fill in the form below to edit this entry on the database.
-            </p>
-        </div>
-    </div>
-</div>
-<!-- /INTRODUCTION -->
+<div class="container page-container">
 
-<div class="container my-3">
-    <div class="row">
-        <div class="col-12">
-            <!-- EDITFORM -->
-            <form action="{{url_for('update_entry', entry_id=entry._id)}}" method="POST">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" name="name" value="{{entry.name}}" required>
-                </div>
-                <div class="form-group">
-                    <label for="description">Description</label>
-                    <textarea class="form-control" id="description" name="description" rows="3" required>{{entry.description}}</textarea>
-                </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" id="upvotes" name="upvotes" value="{{entry.upvotes}}" hidden>
-                </div>
-                <button type="submit" class="btn btn-outline-primary">Submit</button>
-            </form>
-            <!-- /EDITFORM -->
+    <!-- INTRODUCTION -->
+    <div class="container mt-3 mb-3">
+        <div class="row text-center mb-2">
+            <div class="col-12">
+                <h1>Edit Entry</h1>
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-12">
+                <p>
+                    Fill in the form below to edit this entry on the database.
+                </p>
+            </div>
+        </div>
+    </div>
+    <!-- /INTRODUCTION -->
+
+    <div class="container my-3">
+        <div class="row">
+            <div class="col-12">
+                <!-- EDITFORM -->
+                <form action="{{url_for('update_entry', entry_id=entry._id)}}" method="POST">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input type="text" class="form-control" id="name" name="name" value="{{entry.name}}" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea class="form-control" id="description" name="description" rows="3" required>{{entry.description}}</textarea>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="upvotes" name="upvotes" value="{{entry.upvotes}}" hidden>
+                    </div>
+                    <button type="submit" class="btn btn-outline-primary">Submit</button>
+                </form>
+                <!-- /EDITFORM -->
+            </div>
         </div>
     </div>
 </div>
